# my_study

./: .gitignore  README.md
Pythonによる時系列分析/: README.md  README.txt  pyproject.toml
Pythonによる時系列分析/chapter3/: MMM.csv  chap3_2(code_3-1_3-14).py  chap3_2.ipynb  chap3_3_03(code_3-15_3-22).py  chap3_3_04(code_3-23_3-29).py  chap3_3_05(code_3-30_3-36).py  chap3_3_06(code_3-37_3-44).py  chap3_3_07(code_3-45_3-53).py  chap3_3_09(code_3-54_3-63).py  chap3_3_10(code_3-64_3-73).py  chap3_4_01(code_3-74_3-80).py  chap3_4_02(code_3-81_3-88).py  chap3_4_03(code_3-89_3-96).py  chap3_4_04(code_3-97_3-103).py  chap3_4_05(code_3-104_3-111).py  chap3_5_02(code_3-112_3-117).py  chap3_5_04(code_3-118_3-126).py  chap3_5_05(code_3-127_3-130).py  df_tbl.csv
Pythonによる時系列分析/chapter3/notebook/: chap3_2.ipynb  chap3_3.ipynb  chap3_3_arima&prophet.ipynb  chap3_3_linear_regression.ipynb  chap3_4_1_mstl.ipynb  chap3_4_2_tbats&arimax.ipynb  chap3_4_3_linear_regression.ipynb  chap3_5_1.ipynb
Pythonによる時系列分析/chapter5/: chap5_1(code_5-1_5-15).py  chap5_2(code_5-16_5-31).py  chap5_3(code_5-32_5-64).py  chap5_4(code_5-65_5-73).py  chap5_5(code_5-74_5-90).py  chap5_6(code_5-91_5-108).py  chap5_7(code_5-109_5-132).py
Pythonによる時系列分析/src/pythonniyorushi_xi_lie_fen_xi/: __init__.py
Udemy_FastAPI/: pyproject.toml
Udemy_FastAPI/section_3/: api_practice.ipynb
Udemy_FastAPI/section_4/: test_api.py  type_hints.py
Udemy_FastAPI/section_5/: sample.py
Udemy_FastAPI/section_5/deploy_api/: main.py
Udemy_FastAPI/section_7/sql_app/: crud.py  database.py  models.py  schemas.py
Udemy_FastAPI/src/udemy_fastapi/: __init__.py
coding-samurai/: pyproject.toml
coding-samurai/cp01/04_Gradio_Docker/: Dockerfile
coding-samurai/cp01/99_Practice/02/: Dockerfile  compose.yaml
coding-samurai/cp02/01_Sengoku_Equip_Insight/: pretrained_list.ipynb
coding-samurai/cp02/03_Samurai_Kaoawase/: app.py
coding-samurai/cp02/03_Samurai_Kaoawase/work/: camera_example.py
coding-samurai/cp02/04_EdoFlow_Highlighter/work/: raft_estimation.py
fastapi_intro/: Dockerfile  README.md  compose.yaml  pyproject.toml
fastapi_intro/api/: main.py
fastapi_intro/api/routers/: task.py
fastapi_intro/api/schemas/: task.py
fastapi_intro/src/fastapi_intro/: __init__.py
fastapi_udemy/: README.md  pyproject.toml
fastapi_udemy/section_3/: api_rakuten.ipynb
fastapi_udemy/section_4/: main.py  sample.json
fastapi_udemy/section_6/: app.py
fastapi_udemy/section_7/: app.py
fastapi_udemy/section_7/sql_app/: main.py
first_docker_sagemaker/chap_1/: Dockerfile_opencv  Dockerfile_python  Dockerfile_pytorch  Dockerfile_pytorch_normal  hello_world.py
first_docker_sagemaker/chap_1/kmnist_autoencoder/: kmnist_autoencoder.py
first_docker_sagemaker/chap_1/mnist_classification/: mnist_classification.py
python-pro/: pyproject.toml
python-pro/ch05/05unittest4/: test_product.py
python-pro/src/python_pro/: __init__.py  numpy.py
try_open_interpreter/: README.md  pyproject.toml
try_open_interpreter/src/try_open_interpreter/: __init__.py
画像処理入門/: .gitignore  README.md  pyproject.toml
画像処理入門/chap02/sec02/object_detection/: Test_voc2012_dataLoader.ipynb  augmentations.py  download_vocdata_weights.ipynb  voc.py
画像処理入門/chap02/sec03以降/02_03_08サンプルプログラム/: product.ipynb
画像処理入門/chap02/sec03以降/ObjectDetection/: Predict_SSD.ipynb  Predict_SSD_Demo.ipynb  SSD_Training.ipynb  Test_SSD.ipynb  augmentations.py  match.py  ssd .py  ssd_predictions.py
画像処理入門/src/hua_xiang_chu_li_ru_men/: __init__.py
