[project]
name = "pythonniyorushi-xi-lie-fen-xi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "matplotlib>=3.7.5",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.3.2",
    "pmdarima>=2.0.4",
    "xgboost>=2.0.3",
    "optuna>=3.5.0",
    "tbats>=1.1.3",
    "prophet>=1.1.5",
    "lingam>=1.8.3",
    "graphviz>=0.20.1",
    "python-igraph>=0.11.4",
    "factor_analyzer>=0.5.1",
    "lifelines>=0.27.8",
    "lifetimes>=0.11.3",
    "pip>=24.0",
    "rpy2>=3.5.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pythonniyorushi_xi_lie_fen_xi:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pythonniyorushi_xi_lie_fen_xi"]
