[project]
name = "coding-samurai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = [
    "gradio>=4.22.0",
    "streamlit>=1.32.2",
    "open_clip_torch>=2.24.0",
    "torch>=2.2.1",
    "timm>=0.9.16",
    "plotly>=5.20.0",
    "transformers>=4.39.1",
    "ipykernel>=6.29.3",
    "pydantic>=2.6.4",
    "mediapipe==0.9.3.0",
    "yt-dlp>=2023.11.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "coding_samurai:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coding_samurai"]
