[project]
name = "fastapi-intro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "fastapi_intro:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_intro"]
