[project]
name = "hua-xiang-chu-li-ru-men"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "pip>=24.0",
    "torch>=2.2.1",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "hua_xiang_chu_li_ru_men:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hua_xiang_chu_li_ru_men"]
